--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--Oleg Pilipiei-->
     <!--Olexii Luhovyi-->
-    <--Oleksii Skirko-->
+    <!--Oleksii Skirko-->
     <header>
         <h1>Team Template</h1>
     </header>
