--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!--Olexandr Bahno-->
     <!--Olexii Luhovyi-->
     <!--Oleksii Skirko-->
+    <!--Volodymyr Nazarovets-->
     <header>
         <h1>Team Template</h1>
     </header>
