--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Olexandr Bahno-->
     <!--Olexii Luhovyi-->
     <!--Oleksii Skirko-->
-    <!--Blahyy Oleksandr-->
+    <!--Blahyy-->
     <header>
         <h1>Team Template</h1>
     </header>
