--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Olexii Luhovyi-->
     <!--Oleksii Skirko-->
     <!--Blahyy-->
+    <!--Volodymyr Nazarovets-->
     <header>
         <h1>Team Template</h1>
     </header>
