--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Oleg Pilipiei-->
     <!--Olexandr Bahno-->
     <!--Olexii Luhovyi-->
+    <!--Oleksandr Makushniak-->
     <!--Oleksii Skirko-->
     <!--Blahyy Oleksandr-->
     <!--Volodymyr Nazarovets-->
