--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!--Oleg Pilipiei-->
+    <!--Olexii Luhovyi-->
     <!--Alex Mygal-->
     <header>
         <h1>Team Template</h1>
