created header and modified head

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <title>Cryptochange</title>
+    <link rel="shortcut icon" href="img/cryptochange-icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/logo.css">
 </head>
+
 <body>
     <!--Oleg Pilipiei-->
     <!--Olexandr Bahno-->
@@ -16,8 +19,50 @@
     <!--Oleksii Skirko-->
     <!--Blahyy Oleksandr-->
     <!--Volodymyr Nazarovets-->
-    <header>
-        <h1>Team Template</h1>
+    <header class="header">
+        <div class="header__contacts">
+            <div class="header__contacts-support support">
+                <p class="support__text">Support us on:</p>
+                <a class="support__linc" href="#"> ICO listings</a>
+            </div>
+            <div class="header__contacts-write write">
+                <p class="write__text">Write us :</p>
+                <a class="write__linc" href="mailto:cryptochange@email.com">cryptochange@email.com</a>
+            </div>
+        </div>
+        <div class="header__line">
+
+        </div>
+        <nav class="header__nav">
+            <a class="header__logo-container " href="#">
+                <img class="header__logo" src="/img/cryptochange-logo.svg" alt="cryptochange-logo">
+            </a>
+            <div class="header__menu">
+                <ul class="header__menu-list list">
+                    <li class="list__about-container">
+                        <a class="list__about-linc" href="#">About</a>
+                    <li class="list__roadmap-container">
+                        <a class="list__roadmap-linc" href="#">Roadmap</a>
+                    <li class="list__app-container">
+                        <a class="list__app-linc" href="#">App</a>
+                    <li class="list__team-container">
+                        <a class="list__team-linc" href="#">Team</a>
+                    <li class="list__press-container">
+                        <a class="list__press-linc" href="#">Press</a>
+                    <li class="list__feedback-container">
+                        <a class="list__feedback-linc" href="#">Feedback</a>
+                    <li class="list__news-container">
+                        <a class="list__news-linc" href="#">News</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="header__banner">
+            <h1 class="header__banner-title">Blockchain Exchange</h1>
+            <p class="header__banner-text">Cryptochange is a revolutionary exchange that provides extremely fast and
+                reliable currency exchange with zero fees.</p>
+            <a class="header__banner-download" href="#">Download Whitepaper →</a>
+        </div>
     </header>
     <main>
         <div><!--block 8--></div>
@@ -26,4 +71,5 @@
 
     </footer>
 </body>
+
 </html>
