--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <nav class="header__nav">
             <a class="header__logo-container " href="#">
-                <img class="header__logo" src="/img/cryptochange-logo.svg" alt="cryptochange-logo">
+                <img class="header__logo" src="img/cryptochange-logo.svg" alt="cryptochange-logo">
             </a>
             <div class="header__menu">
                 <ul class="header__menu-list list">
