added new class for h2 elements

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 yellow line before the title
                 
             -->
-            <h2>ICO Progress</h2>
+            <h2 class="header__section-title">ICO Progress</h2>
         </div>
 
         <div class="crp-information">
@@ -133,7 +133,7 @@
                 yellow line before the title
                 
             -->
-            <h2>What Stage Are We at?</h2>
+            <h2 class="header__section-title">What Stage Are We at?</h2>
             <p>Want to learn more about our project?<a href="#">Clicks here</a></p>
         </div>
         <div class="stages-of-development">
