comments on mistakes in sections 3 and 5 fix-1

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="crp-graph-picture">
                 <img width="200" src="img/cryptocurrency-chart.jpg" alt="cryptocurrency-chart">
             </div>
-
+        </div>
     </section>
 
     <section class="stages">
