Footer first 2 blocks

--- a/index.html
+++ b/index.html
@@ -264,13 +264,42 @@
                     <!--Css code-->
                 </div>
             </div>
-        </div>    
+        </div>
 
     </section>
     <main>
         <div><!--block 8--></div>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer__company-info">
+            <a href="#">
+                <img src="img/cryptochange-logo.svg" width="190" alt="cryptochange-logo">
+            </a>
+            <p class="footer__company-info-description">
+                We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from
+                around the world.
+            </p>
+            <a href="#">Buy CRP tokens →</a>
+        </div>
+        <div class="footer__useful-links">
+            <h3 class="footer__useful-links-header">Useful Links</h3>
+            <nav class="footer__useful-links-menu">
+                <a href="about" class="footer__useful-links-menu-item">About</a>
+                <a href="roadmap" class="footer__useful-links-menu-item">Roadmap</a>
+                <a href="distribution" class="footer__useful-links-menu-item">Distribution</a>
+                <a href="app" class="footer__useful-links-menu-item">App</a>
+                <a href="whitepaper" class="footer__useful-links-menu-item">Whitepaper</a>
+                <a href="team" class="footer__useful-links-menu-item">Team</a>
+                <a href="press" class="footer__useful-links-menu-item">Press</a>
+                <a href="feedback" class="footer__useful-links-menu-item">Feedback/a>
+            </nav>
+        </div>
+        <div class="footer__follow-us-info">
+            <h3 class="footer__follow-us-header">Follow Us</h3>
+            <p class="footer__follow-us-paragraph">We're building a strong crypto community that will boost the adoption
+                of blockchain-based projects in the financial market.
+            </p>
+        </div>
 
     </footer>
 </body>
