Added all footer sections

--- a/index.html
+++ b/index.html
@@ -270,26 +270,26 @@
     </main>
     <footer class="footer">
         <div class="footer__company-info">
-            <a href="#">
+            <a href="#" class="footer__company-info-logo">
                 <img src="img/cryptochange-logo.svg" width="190" alt="cryptochange-logo">
             </a>
             <p class="footer__company-info-description">
                 We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from
                 around the world.
             </p>
-            <a href="#">Buy CRP tokens →</a>
+            <a href="#" class="footer__company-info-buy-crp-tokens">Buy CRP tokens →</a>
         </div>
         <div class="footer__useful-links">
             <h3 class="footer__useful-links-header">Useful Links</h3>
             <nav class="footer__useful-links-menu">
-                <a href="about" class="footer__useful-links-menu-item">About</a>
-                <a href="roadmap" class="footer__useful-links-menu-item">Roadmap</a>
-                <a href="distribution" class="footer__useful-links-menu-item">Distribution</a>
-                <a href="app" class="footer__useful-links-menu-item">App</a>
-                <a href="whitepaper" class="footer__useful-links-menu-item">Whitepaper</a>
-                <a href="team" class="footer__useful-links-menu-item">Team</a>
-                <a href="press" class="footer__useful-links-menu-item">Press</a>
-                <a href="feedback" class="footer__useful-links-menu-item">Feedback/a>
+                <a href="#" class="footer__useful-links-menu-item">About</a>
+                <a href="#" class="footer__useful-links-menu-item">Roadmap</a>
+                <a href="#" class="footer__useful-links-menu-item">Distribution</a>
+                <a href="#" class="footer__useful-links-menu-item">App</a>
+                <a href="#" class="footer__useful-links-menu-item">Whitepaper</a>
+                <a href="#" class="footer__useful-links-menu-item">Team</a>
+                <a href="#" class="footer__useful-links-menu-item">Press</a>
+                <a href="#" class="footer__useful-links-menu-item">Feedback</a>
             </nav>
         </div>
         <div class="footer__follow-us-info">
@@ -297,6 +297,28 @@
             <p class="footer__follow-us-paragraph">We're building a strong crypto community that will boost the adoption
                 of blockchain-based projects in the financial market.
             </p>
+            <a href="want-to-know-more" class="footer__follow-us-want-to-know-more">Want to know more? →</a>
+            <div class="footer__company-info-icons">
+                <a class="footer__company-info-icons-item" width="40">
+                    <img src="img/facebook-icon.svg" alt="facebook-icon">
+                </a>
+                <a class="footer__company-info-icons-item" width="40">
+                    <img src="img/instagram-icon.svg" alt="instagram-icon">
+                </a>
+                <a class="footer__company-info-icons-item" width="40">
+                    <img src="img/twitter-icon.svg" alt="twitter-icon">
+                </a>
+                <a class="footer__company-info-icons-item" width="40">
+                    <img src="img/youtube-icon.svg" alt="youtube-icon">
+                </a>
+                <a class="footer__company-info-icons-item" width="40">
+                    <img src="img/email-icon.svg" alt="email-icon">
+                </a>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <p class="footer__copyright-description-item">© Created by</p>
+            <p class="footer__copyright-description-item">All rights Reserved</p>
         </div>
 
     </footer>
