--- a/index.html
+++ b/index.html
@@ -300,19 +300,19 @@
             <a href="want-to-know-more" class="footer__follow-us-want-to-know-more">Want to know more? →</a>
             <div class="footer__company-info-icons">
                 <a class="footer__company-info-icons-item">
-                    <img src="img/facebook-icon.svg" alt="facebook-icon">
+                    <img src="img/facebook-icon.svg" alt="facebook-icon" width="33">
                 </a>
                 <a class="footer__company-info-icons-item">
-                    <img src="img/instagram-icon.svg" alt="instagram-icon">
+                    <img src="img/instagram-icon.svg" alt="instagram-icon" width="33">
                 </a>
                 <a class="footer__company-info-icons-item">
-                    <img src="img/twitter-icon.svg" alt="twitter-icon">
+                    <img src="img/twitter-icon.svg" alt="twitter-icon" width="33">
                 </a>
                 <a class="footer__company-info-icons-item">
-                    <img src="img/youtube-icon.svg" alt="youtube-icon">
+                    <img src="img/youtube-icon.svg" alt="youtube-icon" width="33">
                 </a>
                 <a class="footer__company-info-icons-item">
-                    <img src="img/email-icon.svg" alt="email-icon">
+                    <img src="img/email-icon.svg" alt="email-icon" width="33">
                 </a>
             </div>
         </div>
