start first step

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+
     <!--Oleg Pilipiei-->
     <!--Olexandr Bahno-->
     <!--Olexii Luhovyi-->
@@ -132,6 +133,7 @@
                 yellow line before the title
                 
             -->
+            <!--Тут має бути 4 частина-->
             <h2 class="header__section-title">What Stage Are We at?</h2>
             <p>Want to learn more about our project?<a href="#">Clicks here</a></p>
         </div>
