--- a/index.html
+++ b/index.html
@@ -269,6 +269,83 @@
 
     </section>
     <main>
+
+
+        <!--Block 7 start-->
+        <div>
+            <div>
+                <div>
+                    <p>Core Features</p>
+                    <p>We believe in decentralized and reliable crypto exchange.</p>
+                </div>
+    
+                <div>
+                    <p>Want more features?</p>
+                    <p>Contact us to share ideas! →</p>
+                </div>
+            </div>
+
+
+            <div> <!--carousel-->
+                <div> <!--carousel block one-->
+                    <div>
+                        <!-- полоса градіента -->
+                    </div>
+                    <div>
+                        <p>Zero Fee</p>
+                        <p>Yes, the fee is really zero! In addition, we work with the best trading platforms and offer the best rate in the market. </p>
+                    </div>
+                    <button></button>
+                    <button></button>
+                </div>
+
+                <div> <!--carousel block two-->
+                    <div>
+                        <!-- полоса градіента -->
+                    </div>
+                    <div>
+                        <p>Crypto to Fiat</p>
+                        <p>Thanks to our financial partners, you can use Visa or MasterCard to buy or sell cryptocurrencies on the platform.</p>
+                    </div>
+                    <button></button>
+                    <button></button>
+                </div>
+
+                <div> <!--carousel block three-->
+                    <div>
+                        <!-- полоса градіента -->
+                    </div>
+                    <div>
+                        <p>Oracle</p>
+                        <p>We partner with Oracle iService for the implementation of cross-platform data services within blockchain and off-chain.</p>
+                    </div>
+                    <button></button>
+                    <button></button>
+                </div>
+
+                <div> <!--carousel block four-->
+                    <div>
+                        <!-- полоса градіента -->
+                    </div>
+                    <div>
+                        <p>NTF</p>
+                        <p>Cryptochange now supports the new trendy technology of NFT to achieve the digitization of any analog assets on blockchain. </p>
+                    </div>
+                    <button></button>
+                    <button></button>
+                </div>
+
+            </div>
+
+
+
+        </div>
+
+        <!--Block 7 finish-->
+
+
+
+
         <div><!--block 8--></div>
     </main>
     <footer class="footer">
