comments on mistakes

--- a/index.html
+++ b/index.html
@@ -403,4 +403,27 @@
 
     </footer>
 </body>
+<!-- Коментар до блоку 3.
+1. Блок повинен знаходитися у тезі main
+2. yellow line before the title не міститьт власного класу з власною назвою. Клас варто реалізувувати через div
+3. 77 лінія містить не коректну назву класу, тег h2 знаходиться у середені контенеру sections з class="ico-progress".
+ Тому саме ico-progress ми будемо вважати кореневим класом. Щоб не порушувати тапологію BEM змінимо назву класу на ico_rogress. 
+ Відповідно до цих змін назва класу h2 у рядку 77 міє виглядати так =>
+            <div class="ico_progress__title-container">
+                <div class="ico_progress__title">
+                    <p class="ico_progress__title-line">—</p>
+                    <h2 class="ico_progress__title-text">ICO Progress</h2>
+                </div>
+            </div>
+4. Аналогічні помилки зберігаються протягом усьго файлу. У назві єлементів немає закріплення до кореневого класу
+5. у рядку з 80-86 (та у подібних до цієї кострукціях) текст просто висить у контенері без бульякого відповідного тегу. Це завадить нормальній роботі CSS
+6. 114 рядок тег <a> не має власного div
+7. 119 рядок. Стиль прописаний у зображенні
+ -->
+<!--Коментар до блоку 5.
+пункти 1-3 аналогічні 
+4. 140-141 рядок та аналогічні до нього. Аналогічна помилка з 5 пуку розбіру section №3
+5. 155-157 рядок та аналогічні до нього. Відсутній клас. Та зсилаючись на макет. Повністю відсутня структура Об'єкта.
+ Там повинно бути багато контейнерів div які у майбутньому будуть змінюватися за допомогою CSS
+-->
 </html>
