--- a/index.html
+++ b/index.html
@@ -269,7 +269,48 @@
 
     </section>
     <main>
-
+        <!--Блок2-->
+        <section class="why_wrapper">
+            <div>
+                <!--
+                    <span class="#">
+                    </span> 
+                    yellow line before the title 
+                -->
+                <h2 class="why_header">Why cryptochange?</h2>
+                <div class ="text_wrapper">
+                    <div class="text_container bolt_font">
+                    <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.</p>
+                    </div>
+                        <div class="text_container">
+                        <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from around the world. We believe that crypto transactions can be really instant!</p>
+                        </div>
+                            <div class="text_container">
+                            <p>With our new InstSwap technology, we make all transactions twice faster than before! That is, if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of 2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
+                            </div>
+                            <div class="links_container"><ul>
+                                <li>
+                                    <!--<span>/svg/need add svg image here all elements</span>-->
+                                    <a>Based on Blockchain</a></li>
+                                <li><a>Global Payments</a></li>
+                                <li><a>Crypto to Fiat</a></li>
+                                <li><a>Instant Transactions</a></li>
+                                <li><a>Free of Custody</a></li>
+                                <li><a>The Best Rates</a></li>
+                                <li><a>All Types of Altcoins</a></li>
+                                <li><a>P2P Payments</a></li>
+                                <li><a>Reliable Service</a></li>
+                            </ul>
+                        </div>
+            </div>
+            <div class="image_wrapper"><img src="img/why cryptochange.png" alt="why_cry"></div>
+            <div class="paginator_wrapper">
+                <div><Button id="left_btn"></Button></div>
+                <div><!--6 inside the tag add svg--></div>
+                <div><Button id="right_btn"></Button></div>
+            </div>
+            </div>
+        </section>
 
         <!--Block 7 start-->
         <div>
