--- a/index.html
+++ b/index.html
@@ -278,37 +278,87 @@
                     yellow line before the title 
                 -->
                 <h2 class="why_header">Why cryptochange?</h2>
-                <div class ="text_wrapper">
+                <div class="text_wrapper">
                     <div class="text_container bolt_font">
-                    <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.</p>
+                        <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
+                        </p>
                     </div>
-                        <div class="text_container">
-                        <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users from around the world. We believe that crypto transactions can be really instant!</p>
-                        </div>
-                            <div class="text_container">
-                            <p>With our new InstSwap technology, we make all transactions twice faster than before! That is, if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of 2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
+                    <div class="text_container">
+                        <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users
+                            from around the world. We believe that crypto transactions can be really instant!</p>
+                    </div>
+                    <div class="text_container">
+                        <p>With our new InstSwap technology, we make all transactions twice faster than before! That is,
+                            if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of
+                            2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
+                    </div>
+                    <div class="links__container-arrow">
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
                             </div>
-                            <div class="links_container"><ul>
-                                <li>
-                                    <!--<span>/svg/need add svg image here all elements</span>-->
-                                    <a>Based on Blockchain</a></li>
-                                <li><a>Global Payments</a></li>
-                                <li><a>Crypto to Fiat</a></li>
-                                <li><a>Instant Transactions</a></li>
-                                <li><a>Free of Custody</a></li>
-                                <li><a>The Best Rates</a></li>
-                                <li><a>All Types of Altcoins</a></li>
-                                <li><a>P2P Payments</a></li>
-                                <li><a>Reliable Service</a></li>
-                            </ul>
+                            <div>
+                                <p>Based on</p>
+                                <a href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a>
+                            </div>
                         </div>
-            </div>
-            <div class="image_wrapper"><img src="img/why cryptochange.png" alt="why_cry"></div>
-            <div class="paginator_wrapper">
-                <div><Button id="left_btn"></Button></div>
-                <div><!--6 inside the tag add svg--></div>
-                <div><Button id="right_btn"></Button></div>
-            </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Crypto to Fiat</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Instant Transactions</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Free of Custody</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>The Best Rates</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>All Types of Altcoins</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>P2P Payments</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Reliable Service</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="image_wrapper"><img class="image_wrapper-why" src="img/why cryptochange.png" alt="why_cry">
+                </div>
+                <div class="paginator_wrapper">
+                    <div><Button id="left_btn"></Button></div>
+                    <div><!--6 inside the tag add svg--></div>
+                    <div><Button id="right_btn"></Button></div>
+                </div>
             </div>
         </section>
 
@@ -319,7 +369,7 @@
                     <p>Core Features</p>
                     <p>We believe in decentralized and reliable crypto exchange.</p>
                 </div>
-    
+
                 <div>
                     <p>Want more features?</p>
                     <p>Contact us to share ideas! →</p>
@@ -334,7 +384,8 @@
                     </div>
                     <div>
                         <p>Zero Fee</p>
-                        <p>Yes, the fee is really zero! In addition, we work with the best trading platforms and offer the best rate in the market. </p>
+                        <p>Yes, the fee is really zero! In addition, we work with the best trading platforms and offer
+                            the best rate in the market. </p>
                     </div>
                     <button></button>
                     <button></button>
@@ -346,7 +397,8 @@
                     </div>
                     <div>
                         <p>Crypto to Fiat</p>
-                        <p>Thanks to our financial partners, you can use Visa or MasterCard to buy or sell cryptocurrencies on the platform.</p>
+                        <p>Thanks to our financial partners, you can use Visa or MasterCard to buy or sell
+                            cryptocurrencies on the platform.</p>
                     </div>
                     <button></button>
                     <button></button>
@@ -358,7 +410,8 @@
                     </div>
                     <div>
                         <p>Oracle</p>
-                        <p>We partner with Oracle iService for the implementation of cross-platform data services within blockchain and off-chain.</p>
+                        <p>We partner with Oracle iService for the implementation of cross-platform data services within
+                            blockchain and off-chain.</p>
                     </div>
                     <button></button>
                     <button></button>
@@ -370,7 +423,8 @@
                     </div>
                     <div>
                         <p>NTF</p>
-                        <p>Cryptochange now supports the new trendy technology of NFT to achieve the digitization of any analog assets on blockchain. </p>
+                        <p>Cryptochange now supports the new trendy technology of NFT to achieve the digitization of any
+                            analog assets on blockchain. </p>
                     </div>
                     <button></button>
                     <button></button>
@@ -467,4 +521,5 @@
 5. 155-157 рядок та аналогічні до нього. Відсутній клас. Та зсилаючись на макет. Повністю відсутня структура Об'єкта.
  Там повинно бути багато контейнерів div які у майбутньому будуть змінюватися за допомогою CSS
 -->
+
 </html>
