--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="image_wrapper"><img class="image_wrapper-why" src="img/why cryptochange.png" alt="why_cry">
+                <div class="image_wrapper"><img class="image_wrapper-why" src="img/why_cryptochange.png" alt="why_cry">
                 </div>
                 <div class="paginator_wrapper">
                     <div><Button id="left_btn"></Button></div>
