--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
                 
             -->
             <!--Тут має бути 4 частина-->
+
+            <section>
+                <div>
+                    <img src=""
+                </div>
+            </section>
             <h2 class="header__section-title">What Stage Are We at?</h2>
             <p>Want to learn more about our project?<a href="#">Clicks here</a></p>
         </div>
