--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
 
             <section>
                 <div>
-                    <img src=""
+                    <img src="img/bitcoineye.svg" alt="bitcoineye">
+                    <h2>Limitless Exchanges</h2>
+                    <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't have them at all.</p>
+                </div>
+                <div>
+                    
                 </div>
             </section>
             <h2 class="header__section-title">What Stage Are We at?</h2>
