--- a/index.html
+++ b/index.html
@@ -129,6 +129,26 @@
         </section>
         <!--end of 3 section-->
         <!--Тут має бути 4 частина-->
+        <!--Chapter 4-->
+        <section>
+            <div>
+                <img src="img/bitcoineye.svg" width="40px" alt="bitcoineye">
+                <h2>Limitless Exchanges</h2>
+                <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't have them at all.</p>
+            </div>
+            <div>
+                <img src="rupor" width="40px" alt="rupor">
+                <h2>Transparent Transactions</h2>
+                <p>All the transactions are recorded in blockchain — unique technology that has changed the world of payments.</p>
+            </div>
+            <div>
+                <img src="currencyexchange" width="40px" alt="currencyexchange">
+                <h2>Instant Exchange</h2>
+                <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in Cryptochange.</p>
+            </div>
+            
+        </section>
+        <!--Chapter finished-->
         <!--5 section-->
         <section class="section">
             <div class="section__header section-header">
