--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
                 <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't have them at all.</p>
             </div>
             <div>
-                <img src="rupor" width="40px" alt="rupor">
+                <img src="rupor.svg" width="40px" alt="rupor">
                 <h2>Transparent Transactions</h2>
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of payments.</p>
             </div>
             <div>
-                <img src="currencyexchange" width="40px" alt="currencyexchange">
+                <img src="currencyexchange.svg" width="40px" alt="currencyexchange">
                 <h2>Instant Exchange</h2>
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in Cryptochange.</p>
             </div>
