--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
         <!--Chapter 4-->
         <section>
             <div>
-                <img src="img/bitcoineye.svg" width="40px" alt="bitcoineye">
+                <img src="img/bitcoineye.svg" width="40" alt="bitcoineye">
                 <h2>Limitless Exchanges</h2>
                 <p>You can start with less than $2 in the coin you have. Don't worry about any upper limits — we don't have them at all.</p>
             </div>
             <div>
-                <img src="img/bitcoineye.svg" width="40px" alt="rupor">
+                <img src="img/bitcoineye.svg" width="40" alt="rupor">
                 <h2>Transparent Transactions</h2>
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of payments.</p>
             </div>
             <div>
-                <img src="img/bitcoineye.svg" width="40px" alt="currencyexchange">
+                <img src="img/bitcoineye.svg" width="40" alt="currencyexchange">
                 <h2>Instant Exchange</h2>
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in Cryptochange.</p>
             </div>
