--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <p>All the transactions are recorded in blockchain — unique technology that has changed the world of payments.</p>
             </div>
             <div>
-                <img src="img/cryptochange-icon.png" width="40" alt="cryptochange-icon">
+                <img src="img/currencyexchange.svg" width="40" alt="currencyexchange">
                 <h2>Instant Exchange</h2>
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in Cryptochange.</p>
             </div>
