--- a/index.html
+++ b/index.html
@@ -146,6 +146,21 @@
                 <h2>Instant Exchange</h2>
                 <p>No need to wait for hours to get your transactions approved. Everything happens really instantly in Cryptochange.</p>
             </div>
+            <div>
+                <img src="img/altcoins.svg" width="40" alt="altcoins">
+                <h2>All Altcoins</h2>
+                <p>Whether it's Bitcoin, Ethereum, Monero, or any other altcoin, you can exchange it for other cryptos of fiat money.</p>
+            </div>
+            <div>
+                <img src="img/bestrait.svg" width="40" alt="bestrait">
+                <h2>Best Rates/h2>
+                <p>No need to try different exchanges to find the best rate. We work with a number of cryptocurrency trading platforms.</p>
+            </div>
+            <div>
+                <img src="img/bank.svg" width="40" alt="bank">
+                <h2>Bank Transfers</h2>
+                <p>Do you need to withdraw your crypto assets to your bank account? No worries, we can do that due to our financial partners.</p>
+            </div>
             
         </section>
         <!--Chapter finished-->
