--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
             <div>
                 <img src="img/bestrait.svg" width="40" alt="bestrait">
-                <h2>Best Rates/h2>
+                <h2>Best Rates</h2>
                 <p>No need to try different exchanges to find the best rate. We work with a number of cryptocurrency trading platforms.</p>
             </div>
             <div>
