add 'Contacs Us' in te 8 block

--- a/index.html
+++ b/index.html
@@ -631,6 +631,9 @@
                     <p>Medium</p>
                 </li>
             </ul>
+            <p>* Do you want to become our partner? Click on the button and contact us in any convenient way for you.</p>
+            <a href="#">Contact Us</a>
+            <a href="#">Learn More<!--white arrow--></a>
         </div>
         <!--End of block 8-->
     </main>
