fixed mistakes in the 8 block

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         </div>
 
     </section>
-    
+    <!--Blahyy Oleksandr-->
         <div id="team" class="team">
             <div class="team__experienced">
                 <span class="yellow__line"></span>
@@ -558,7 +558,7 @@
                     </li>
                 </ul>
             </div>
-            <!--Blahyy Oleksandr-->
+            
             <div class="job__opportunities">
                 <span class="yellow__line"></span>
                 <h2>Job Opportunities</h2>
@@ -568,13 +568,13 @@
                         <p>Development Operations Engineer</p>
                         <a href="#">Apply!</a>
                     </li>
-                    <span><!--gray line--></span>
+                    <!--gray line-->
                     <li>
                         <p>New York</p>
                         <p>Paid Acquisition Manager</p>
                         <a href="#">Apply!</a>
                     </li>
-                    <span><!--gray line--></span>
+                    <!--gray line-->
                     <li>
                         <p>New York</p>
                         <p>Golang Senior Developer</p>
