--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 
-
     <!--Oleg Pilipiei-->
     <!--Olexandr Bahno-->
     <!--Olexii Luhovyi-->
@@ -69,6 +68,99 @@
     </header>
 
     <main>
+        <!--2 section-->
+        <section class="why_wrapper">
+            <div>
+                <!--
+                    <span class="#">
+                    </span> 
+                    yellow line before the title 
+                -->
+                <h2 class="why_header">Why cryptochange?</h2>
+                <div class="text_wrapper">
+                    <div class="text_container bolt_font">
+                        <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
+                        </p>
+                    </div>
+                    <div class="text_container">
+                        <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users
+                            from around the world. We believe that crypto transactions can be really instant!</p>
+                    </div>
+                    <div class="text_container">
+                        <p>With our new InstSwap technology, we make all transactions twice faster than before! That is,
+                            if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of
+                            2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
+                    </div>
+                    <div class="links__container-arrow">
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                            </div>
+                            <div>
+                                <p>Based on</p>
+                                <a href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Crypto to Fiat</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Instant Transactions</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Free of Custody</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>The Best Rates</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>All Types of Altcoins</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>P2P Payments</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
+                                <p>Reliable Service</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="image_wrapper"><img class="image_wrapper-why" src="img/why_cryptochange.png" alt="why_cry">
+                </div>
+                <div class="paginator_wrapper">
+                    <div><Button id="left_btn"></Button></div>
+                    <div><!--6 inside the tag add svg--></div>
+                    <div><Button id="right_btn"></Button></div>
+                </div>
+            </div>
+        </section>
+        <!--end of 2 section-->
         <!--3 section-->
         <section class="section">
             <div class="section__header section-header">
@@ -129,8 +221,7 @@
 
         </section>
         <!--end of 3 section-->
-        <!--Тут має бути 4 частина-->
-        <!--Chapter 4-->
+        <!--4 section-->
         <section>
             <div>
                 <img src="img/bitcoineye.svg" width="40" alt="bitcoineye">
@@ -170,7 +261,7 @@
             </div>
 
         </section>
-        <!--Chapter finished-->
+        <!--end of 4 section-->
         <!--5 section-->
         <section class="section">
             <div class="section__header section-header">
@@ -329,108 +420,12 @@
                         <!--Css code-->
                     </div>
                 </div>
-
-
             </div>
-
         </section>
-
         <!--end of section 5-->
-
-        <!--Блок2-->
-        <section class="why_wrapper">
-            <div>
-                <!--
-                    <span class="#">
-                    </span> 
-                    yellow line before the title 
-                -->
-                <h2 class="why_header">Why cryptochange?</h2>
-                <div class="text_wrapper">
-                    <div class="text_container bolt_font">
-                        <p>Crypto exchange has never been that easy. Get your crypto coins in seconds with zero fees.
-                        </p>
-                    </div>
-                    <div class="text_container">
-                        <p>We've created Cryptochange as an easy and fast way to exchange cryptocurrencies between users
-                            from around the world. We believe that crypto transactions can be really instant!</p>
-                    </div>
-                    <div class="text_container">
-                        <p>With our new InstSwap technology, we make all transactions twice faster than before! That is,
-                            if you need to exchange any coins or fiat money, you can do it within 10 minutes instead of
-                            2-10 hours! With Cryptochange, we step into the new crypto world. Join our ICO!</p>
-                    </div>
-                    <div class="links__container-arrow">
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                            </div>
-                            <div>
-                                <p>Based on</p>
-                                <a href="https://en.wikipedia.org/wiki/Blockchain">Blockchain</a>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <a href="https://en.wikipedia.org/wiki/Global_Payments">Global Payments</a>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>Crypto to Fiat</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>Instant Transactions</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>Free of Custody</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>The Best Rates</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>All Types of Altcoins</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>P2P Payments</p>
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <img class="yellow_arrow" src="img/yellow_arrow.svg" alt="yellow_arrow">
-                                <p>Reliable Service</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="image_wrapper"><img class="image_wrapper-why" src="img/why_cryptochange.png" alt="why_cry">
-                </div>
-                <div class="paginator_wrapper">
-                    <div><Button id="left_btn"></Button></div>
-                    <div><!--6 inside the tag add svg--></div>
-                    <div><Button id="right_btn"></Button></div>
-                </div>
-            </div>
-        </section>
-
-        <!--Block 7 start-->
+        <!--6 section-->
+        <!--end of section 6-->
+        <!--7 section-->
         <section>
             <div>
                 <div>
@@ -444,7 +439,6 @@
                         <p>Contact us to share ideas! →</p>
                     </div>
                 </div>
-
 
                 <div> <!--carousel-->
                     <div> <!--carousel block one-->
@@ -501,15 +495,11 @@
                         <button></button>
                         <button></button>
                     </div>
-
                 </div>
-
-
-
             </div>
-
         </section>
-        <!--Blahyy Oleksandr-->
+        <!--end of section 7-->
+        <!--8 section-->
         <div id="team" class="team">
             <div class="team__experienced">
                 <span class="yellow__line"></span>
@@ -567,7 +557,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="job__opportunities">
                 <span class="yellow__line"></span>
                 <h2>Job Opportunities</h2>
@@ -591,7 +580,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
         <div id="press" class="press">
             <div class="press__about">
@@ -646,8 +634,8 @@
             <a href="#">Contact Us</a>
             <a href="#">Learn More<!--white arrow--></a>
         </div>
-        <!--End of block 8-->
-        <!--The start of the block 9-->
+        <!--end of section 8-->
+        <!--9 section-->
         <section class="section__question-need-cryptochange">
             <div>
                 <div class="divider__yellow-dash">
@@ -685,9 +673,7 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
-
                 </div>
                 <div class="area__statistics-speed-transactions">
                     <div>
@@ -723,11 +709,8 @@
                                 <div class="date__Kilian-Smith-speech">
                                     <p>December 15, 2022</p>
                                 </div>
-
                             </div>
                         </div>
-
-
                     </div>
                     <div class="investor__Diana-Johnson">
                         <div class="investor__Diana-Johnson-photo">
@@ -743,11 +726,8 @@
                                 <div class="date__Diana-Johnson-speech">
                                     <p>April 21, 2022</p>
                                 </div>
-
                             </div>
                         </div>
-
-
                     </div>
                 </div>
                 <div class="investor__Dean_Stuart">
@@ -763,19 +743,10 @@
                             <div class="date__Dean-Stuart-speech">
                                 <p>June 12, 2022</p>
                             </div>
-
                         </div>
                     </div>
-
-
                 </div>
-
-
-
-
-
             </div>
-
         </section>
         <section class="section__news-area">
             <div class="list__crypto-news">
@@ -821,7 +792,6 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
             <div class="list__financial-news">
                 <h3>Financial News</h3>
@@ -866,7 +836,6 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
             <div class="list__regulation-news">
                 <h3>Regulation News</h3>
@@ -911,11 +880,11 @@
                         </div>
                     </li>
                 </ul>
-
             </div>
-
         </section>
-        <!--The end of the block 9-->
+        <!--end of section 9-->
+        <!--10 section-->
+        <!--end of section 10-->
     </main>
     <footer class="footer">
         <div class="footer__company-info">
@@ -969,7 +938,6 @@
             <p class="footer__copyright-description-item">© Created by</p>
             <p class="footer__copyright-description-item">All rights Reserved</p>
         </div>
-
     </footer>
 </body>
 <!-- Коментар до блоку 3.
@@ -995,5 +963,4 @@
 5. 155-157 рядок та аналогічні до нього. Відсутній клас. Та зсилаючись на макет. Повністю відсутня структура Об'єкта.
  Там повинно бути багато контейнерів div які у майбутньому будуть змінюватися за допомогою CSS
 -->
-
 </html>
