--- a/index.html
+++ b/index.html
@@ -155,7 +155,38 @@
                 </div>
                 <div class="paginator_wrapper">
                     <div><Button id="left_btn"></Button></div>
-                    <div><!--6 inside the tag add svg--></div>
+                    <div class="block_group">
+                        <div>
+                            <div>
+                                <img class="anycash" src="img/anycash.svg" alt="anycash">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img class="indacoin" src="img/indacoin.svg" alt="indacoin">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img class="intotheblock" src="img/intotheblock.svg" alt="intotheblock">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img class="listinghelp" src="img/listinghelp.svg" alt="listinghelp">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img class="mercuryo" src="img/mercuryo.svg" alt="mercuryo">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img class="moonpay" src="img/moonpay.svg" alt="moonpay">
+                        </div>
+                    </div>
                     <div><Button id="right_btn"></Button></div>
                 </div>
             </div>
