--- a/index.html
+++ b/index.html
@@ -158,33 +158,33 @@
                     <div class="block_group">
                         <div>
                             <div>
-                                <img class="anycash" src="img/anycash.svg" alt="anycash">
+                                <img class="anycash" src="img/anycash.svg" alt="anycash" width="100px">
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
-                            <img class="indacoin" src="img/indacoin.svg" alt="indacoin">
+                            <img class="indacoin" src="img/indacoin.svg" alt="indacoin" width="100px">
                         </div>
                     </div>
                     <div>
                         <div>
-                            <img class="intotheblock" src="img/intotheblock.svg" alt="intotheblock">
+                            <img class="intotheblock" src="img/intotheblock.svg" alt="intotheblock" width="100px">
                         </div>
                     </div>
                     <div>
                         <div>
-                            <img class="listinghelp" src="img/listinghelp.svg" alt="listinghelp">
+                            <img class="listinghelp" src="img/listinghelp.svg" alt="listinghelp" width="100px">
                         </div>
                     </div>
                     <div>
                         <div>
-                            <img class="mercuryo" src="img/mercuryo.svg" alt="mercuryo">
+                            <img class="mercuryo" src="img/mercuryo.svg" alt="mercuryo"width="100px">
                         </div>
                     </div>
                     <div>
                         <div>
-                            <img class="moonpay" src="img/moonpay.svg" alt="moonpay">
+                            <img class="moonpay" src="img/moonpay.svg" alt="moonpay"width="100px">
                         </div>
                     </div>
                     <div><Button id="right_btn"></Button></div>
